<resources>
    <string name="app_name">MyNote</string>
    <string name="myNote">MyNote</string>
    <string name="add">Add</string>
    <string name="setting">Setting</string>
    <string name="persian">Persian</string>
    <string name="english">English</string>
    <string name="save_data">Save</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="success">Success</string>
    <string name="unsuccessful">Unsuccessful</string>
    <string name="time_require">Time is Require</string>
    <string name="date_require">Date is Require</string>
    <string name="title_require">Title is Require</string>
    <string name="description_require">Description is Require</string>
    <string name="you_can_add_here">You can Add Here</string>
    <string name="you_can_edit_here">You Can Edit Here</string>
    <string name="edit">Edit</string>
    <string name="exit">Exit</string>
    <string name="search">Search</string>
    <string name="ok">OK</string>
    <string name="this_is_add_note_button">This is Add Note Button</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear All</string>
    <string name="search_here">Search here…</string>
    <string name="text_can_not_be_empty">Text can not be empty!</string>
    <string name="no_data_found">No data found!!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="home">Home</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="set_time">Set Time</string>
    <string name="set_date">Set Date</string>
    <string name="confirm">Confirm</string>
    <string name="dismiss">Dismiss</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="search_icon">Search Icon</string>
    <string name="close_icon">Close Icon</string>
    <string name="history_icon">History Icon</string>
</resources>