<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item android:id="@+id/item_add"
        android:title="@string/add"
        android:icon="@drawable/ic_baseline_add_24"
        app:showAsAction="always" />
    <item android:id="@+id/item_setting"
        android:title="@string/setting"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_settings_24" />
    <item android:id="@+id/item_search"
        android:title="@string/search"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_search_24" />
    <item android:id="@+id/item_exit"
        android:title="@string/exit"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_exit_to_app_24" />
</menu>