<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.add.AddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbarAddFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/add"
                    app:titleTextAppearance="@style/Toolbar.TitleText"
                    app:titleTextColor="@color/black" />
            </com.google.android.material.appbar.AppBarLayout>


        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/size_0"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coordinatorAdd"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_layout"
                android:layout_width="@dimen/size_0"
                android:layout_height="wrap_content"
                style="@style/textInputLayoutStyleAddNote"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/title"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:hintTextColor="@color/black"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_layout"
                android:layout_width="@dimen/size_0"
                android:layout_height="wrap_content"
                style="@style/textInputLayoutStyleAddNote"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@id/title_layout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:hintTextColor="@color/black"
                    android:inputType="textMultiLine"
                    />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>